[gd_scene load_steps=5 format=2]

[ext_resource path="res://SceneScripts/RocketScript.gd" type="Script" id=1]
[ext_resource path="res://Textures/Characters/Rocket-1.png" type="Texture" id=2]

[sub_resource type="AudioStreamMicrophone" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 6.5 )

[node name="RocketScene" type="Node2D"]
script = ExtResource( 1 )

[node name="StarHolder" type="Node" parent="."]

[node name="SpaceBaground" type="ColorRect" parent="."]
margin_left = -69.0
margin_top = -33.0
margin_right = 1096.0
margin_bottom = 639.0
color = Color( 0.101961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 219.0
margin_top = 100.0
margin_right = 806.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointLabel" type="Label" parent="."]
margin_left = 794.0
margin_top = 560.0
margin_right = 1006.0
margin_bottom = 588.0
text = "123456"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="Button" type="Button" parent="."]
margin_left = 883.0
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 53.0
text = "To Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 56, 44 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true

[node name="PlayerSprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="PausePopup" type="Popup" parent="."]
pause_mode = 2
anchor_right = 0.919
margin_left = 219.0
margin_top = 76.0
margin_right = 705.0
margin_bottom = 392.0

[node name="Main Menu" type="Button" parent="PausePopup"]
margin_left = 136.0
margin_top = 42.0
margin_right = 325.0
margin_bottom = 122.0
text = "Main Menu"

[node name="AsteroidHolder" type="Node" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="pressed" from="PausePopup/Main Menu" to="." method="_on_Main_Menu_pressed"]
